--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/babel" data-type="module" src="index.js"></script>
     
     <link rel="stylesheet" href="style.css">
-    <title>Wsiąść do pociągu</title>
+    <title>Ticket to ride Calculator</title>
     
 </head>
 <body>
